--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,37 @@
-# Python
+# 🧠 Python
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
+*.log
 
-# Virtual environments
+# 🧩 Virtual Environments
 venv/
 env/
-yolo_env/
 .venv/
 
-# OS
-.DS_Store
-Thumbs.db
-
-# IDE
-.vscode/
-*.suo
-*.user
-*.userosscache
-*.sln
-
-# Logs and runtime files
-*.log
+# 🧱 Flask cache
+instance/
+*.db
 *.sqlite3
 
-# Ignore video and large model files
+# 🎥 YOLO + Media
+runs/
+uploads/
 *.avi
 *.mp4
 *.mov
 *.mkv
-runs/
-uploads/
-# Uploads, outputs, and large binaries
-uploads/
-*.mp4
-*.mov
-*.mkv
 *.pt
-yolov8n.pt
+*.weights
 
-# Config
-.env
+# 🌐 Frontend & Node.js
+node_modules/
+*.lock
+
+# 🧰 IDE & OS files
+.vscode/
+.DS_Store
+Thumbs.db
+
 
