--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.6",
+    "mongodb": "^6.5.0",
     "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
